# audio-separation-service

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy_project.yaml
app/: main.py
app/models/: audio_separator.py
app/routers/: audio_separation.py
app/services/: separation_service.py
app/utils/: file_handling.py
tests/: test_audio.py  test_audio_separation.py
